---------------------------------------------------------------------------
Change History (newest on top)
---------------------------------------------------------------------------
20070512 (alex)
- extracted class ClassDescription into own java source file
- removed unnecessary mutant generator interface
- Replaced Set with List everywhere due to testability
- Moved loop over multiple classes under test into MutationRunner and added
  association between classUnderTest and the classes tests for that.
- Implemented all senseful transitions based on ROR

20070505: (mike) 
- Added SummaryCreatorEventListener